fix(chooser) fix chooser select input layout bug

--- a/views/assets/stylesheets/scss/qor/qor-chooser.scss
+++ b/views/assets/stylesheets/scss/qor/qor-chooser.scss
@@ -113,7 +113,7 @@
         background-color: unquote("rgb(#{$color-primary})");
     }
     .select2-search--inline {
-        float: none;
+        float: left !important;
         .select2-search__field {
             width: 90% !important;
         }
